--- a/app/src/main/res/layout/activity_service_record_list.xml
+++ b/app/src/main/res/layout/activity_service_record_list.xml
@@ -32,8 +32,8 @@
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuidePercent="0.92"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.92" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddServiceRecord"
@@ -41,9 +41,9 @@
         android:layout_height="wrap_content"
         android:contentDescription="Thêm"
         android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:tint="@android:color/white" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tvEmpty"
@@ -51,9 +51,9 @@
         android:layout_height="wrap_content"
         android:text="Không có bản ghi dịch vụ"
         android:visibility="gone"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
