--- a/app/src/main/res/layout/item_chat_message_sent.xml
+++ b/app/src/main/res/layout/item_chat_message_sent.xml
@@ -1,59 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="8dp">
 
-    <!-- Sent message bubble (right side) -->
+    <!-- Message Bubble (Right Aligned for Sent) -->
     <LinearLayout
-        android:id="@+id/message_container"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:background="@drawable/bg_message_sent"
-        android:orientation="vertical"
-        android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_gravity="end"
+        android:maxWidth="280dp"
+        android:orientation="vertical">
+
+        <!-- Media Container (for images/videos) -->
+        <FrameLayout
+            android:id="@+id/media_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/iv_media"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:background="@drawable/bg_message_sent"
+                android:contentDescription="Sent image"
+                tools:src="@drawable/ic_image_placeholder" />
+
+        </FrameLayout>
 
         <!-- Text Message -->
         <TextView
             android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/bg_message_sent"
+            android:padding="12dp"
             android:textColor="@android:color/white"
             android:textSize="14sp"
-            tools:text="Hello, I need help with my car" />
+            tools:text="Hello, this is a sent message" />
 
-        <!-- Media Image -->
-        <LinearLayout
-            android:id="@+id/layout_media"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/iv_media_image"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:contentDescription="@string/image_message" />
-        </LinearLayout>
-
-        <!-- Time -->
+        <!-- Timestamp -->
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:layout_marginTop="4dp"
-            android:textColor="@android:color/white"
             android:textSize="10sp"
-            android:alpha="0.7"
-            tools:text="10:30" />
+            android:textColor="@android:color/darker_gray"
+            tools:text="10:30 AM" />
+
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
